--- a/app/views/new/languages.html
+++ b/app/views/new/languages.html
@@ -6,14 +6,14 @@
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <a href="/new/phase" class="link-back">Back</a>
+  <a href="/new/{{ code }}/subject" class="link-back">Back</a>
 
   <h1 class="heading-xlarge">
     {{ title }}
   </h1>
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form action="/new/outcome" method="post">
+      <form action="/new/{{ code }}/outcome" method="post">
         {% set languageFields = [
           { name: 'English as a foreign language'},
           { name: 'French'},
@@ -27,15 +27,15 @@
           ]
         %}
 
-        {{ macros.select('new-first-language', 'Language', languageFields) }}
-        {{ macros.select('new-second-language', 'Second language (optional)', languageFields) }}
+        {{ macros.select(code + '-new-first-language', 'Language', languageFields) }}
+        {{ macros.select(code + '-new-second-language', 'Second language (optional)', languageFields) }}
 
         {% set furtherLanguages %}
           <h3 class="heading-medium">Further languages</h3>
-          {{ macros.checkboxGroup('new-further-languages', languageFields, 0, false) }}
+          {{ macros.checkboxGroup(code + '-new-further-languages', languageFields, 0, false) }}
         {% endset %}
 
-        {{ macros.checkboxGroup('new-further-languages', [
+        {{ macros.checkboxGroup(code + '-new-further-languages', [
           {
             name: 'This course has more languages',
             more: furtherLanguages
