--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -126,7 +126,7 @@
   {% endif %}
 
   <p class="add-top-margin">
-    <a href="/new/phase" class="button">Add a new course</a>
+    <a href="/new/start" class="button">Add a new course</a>
   </p>
   <hr />
 
