--- a/app/views/new/accredited-provider.html
+++ b/app/views/new/accredited-provider.html
@@ -6,16 +6,16 @@
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <a href="/new/full-time-part-time" class="link-back">Back</a>
+  <a href="/new/{{ code }}/full-time-part-time" class="link-back">Back</a>
 
   <h1 class="heading-xlarge">
     {{ title }}
   </h1>
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form action="/new/confirm" method="post">
+      <form action="/new/{{ code }}/confirm" method="post">
         {% set accreditedProviderFields %}
-          {{ macros.select('new-accredited-provider', 'Name of accredited provider', [
+          {{ macros.select(code + '-new-accredited-provider', 'Name of accredited provider', [
             {
               name: 'Goldsmiths, University of London'
             },
@@ -39,7 +39,7 @@
           ]
         %}
 
-        {{ macros.radioGroup('new-has-accredited-provider', fields, errors) }}
+        {{ macros.radioGroup(code + '-new-has-accredited-provider', fields, errors) }}
 
         <input type="submit" class="button" value="Continue" />
       </form>
