--- a/app/views/new/phase.html
+++ b/app/views/new/phase.html
@@ -13,7 +13,7 @@
   </h1>
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form action="/new/subject" method="post">
+      <form action="/new/{{ code }}/subject" method="post">
 
         <h2 class="heading-medium remove-top-margin">Level</h2>
         {% set fields = [
@@ -29,7 +29,7 @@
           ]
         %}
 
-        {{ macros.radioGroup('new-phase', fields) }}
+        {{ macros.radioGroup(code + '-new-phase', fields) }}
 
         <h2 class="heading-medium">Special educational needs (SEN)</h2>
         {% set fields = [
@@ -39,7 +39,7 @@
           ]
         %}
 
-        {{ macros.checkboxGroup('new-sen', fields, 0, false) }}
+        {{ macros.checkboxGroup(code + '-new-sen', fields, 0, false) }}
 
         <input type="submit" class="button" value="Continue" />
       </form>
