--- a/app/views/new/title.html
+++ b/app/views/new/title.html
@@ -6,7 +6,7 @@
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <a href="/new/confirm" class="link-back">Back</a>
+  <a href="/new/{{ code }}/confirm" class="link-back">Back</a>
 
   <h1 class="heading-xlarge">
     {{ title }}
@@ -15,8 +15,8 @@
     <div class="column-two-thirds">
       <p>You can customise your course title but any changes will be subject to approval by the Becoming a Teacher team.</p>
 
-      <form action="/new/confirm" method="post">
-        {{ macros.textbox('new-title', 'Title', '', 'form-control-full', false, false, data['new-generated-title']) }}
+      <form action="/new/{{ code }}/confirm" method="post">
+        {{ macros.textbox(code + '-new-title', 'Title', '', 'form-control-full', false, false, data[code + '-new-generated-title']) }}
 
         <input type="submit" class="button" value="Continue" />
       </form>
