--- a/app/views/new/outcome.html
+++ b/app/views/new/outcome.html
@@ -14,7 +14,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <p>What will a trainee get when they complete this course?</p>
-      <form action="/new/{{ code }}/{% if data[code + '-new-course']['include-fee-or-salary'] %}funding{% else %}full-time-part-time{% endif %}" method="post">
+      <form action="/new/{{ code }}/{% if data['new-course']['include-fee-or-salary'] %}funding{% else %}full-time-part-time{% endif %}" method="post">
 
         {% set fields = [
             {
