Fix broken link

--- a/app/views/new/confirm.html
+++ b/app/views/new/confirm.html
@@ -24,7 +24,7 @@
               {{ data[code + '-new-phase'] }}
             </dd>
             <dd class="cya-change">
-              <a href="/new/phase">
+              <a href="/new/{{ code }}/phase">
                 Change<span class="visually-hidden"> phase</span>
               </a>
             </dd>
