Tweak created copy

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -29,7 +29,7 @@
       Your course is saved and ready to complete
     </h3>
     <p>
-      Complete and publish your course so that candidates can find and apply to it.
+      Add the rest of your details and publish the course, so that candidates can find it and apply to it.
     </p>
   </div>
   {% endif %}
