Document new course wizard iteration

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">December 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/new-course">New course wizard – Iteration 6 December</a>
+      </h3>
+      <p>
+        Create a new course in Publish rather than UCAS.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/new-course">New course wizard</a>
       </h3>
       <p>
@@ -70,7 +77,7 @@
       </p>
 
       <h3 class="heading-small">
-        <a href="/history/course-not-running-oct-15">Course statuses – Iteration 15 October 2018</a>
+        <a href="/history/course-not-running-oct-15">Course statuses – Iteration 15 October</a>
       </h3>
       <p>
         We have uncovered more complexity around course statuses on UCAS.
@@ -193,14 +200,14 @@
       </p>
 
       <h3 class="heading-small">
-        <a href="/history/course-not-running">Course statuses – Iteration 3 August 2018</a>
+        <a href="/history/course-not-running">Course statuses – Iteration 3 August</a>
       </h3>
       <p>
         A more indepth look at UCAS course status and how it’ll affect publishing.
       </p>
 
       <h3 class="heading-small">
-        <a href="/history/story-map-aug-1">Story map – 1 August 2018</a>
+        <a href="/history/story-map-aug-1">Story map – 1 August</a>
       </h3>
       <p>
         Screenshots of the end to end journey from publish courses to search and compare.
@@ -281,14 +288,14 @@
       </p>
 
       <h3 class="heading-small">
-        <a href="/history/iteration-june-28">Iteration 28 June 2018</a>
+        <a href="/history/iteration-june-28">Iteration 28 June</a>
       </h3>
       <p>
         Add character counts and refine preview.
       </p>
 
       <h3 class="heading-small">
-        <a href="/history/iteration-june-26">Iteration 26 June 2018</a>
+        <a href="/history/iteration-june-26">Iteration 26 June</a>
       </h3>
       <p>
         Separate courses by accrediting provider. Provide explicit fields for each course offered.
