Update design history description

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,10 +17,10 @@
       <h2 class="heading-medium">December 2018</h2>
 
       <h3 class="heading-small">
-        <a href="/history/new-course">New course wizard – Iteration 6 December</a>
+        <a href="/history/new-course-2">New course wizard – Iteration 6 December</a>
       </h3>
       <p>
-        Create a new course in Publish rather than UCAS.
+        Consider route into and out of wizard
       </p>
 
       <h3 class="heading-small">
