--- a/app/views/new/funding.html
+++ b/app/views/new/funding.html
@@ -6,14 +6,14 @@
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <a href="/new/{{ code }}/outcome" class="link-back">Back</a>
+  <a href="{{ paths.back }}" class="link-back">Back</a>
 
   <h1 class="heading-xlarge">
     {{ title }}
   </h1>
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form action="/new/{{ code }}/full-time-part-time" method="post">
+      <form action="{{ paths.next }}" method="post">
         {% set fields = [
             {
               name: 'Fee paying (no salary)'
