--- a/app/views/new/phase.html
+++ b/app/views/new/phase.html
@@ -6,14 +6,14 @@
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <a href="/" class="link-back">Back</a>
+  <a href="{{ paths.back }}" class="link-back">Back</a>
 
   <h1 class="heading-xlarge">
     {{ title }}
   </h1>
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form action="/new/{{ code }}/subject" method="post">
+      <form action="{{ paths.next }}" method="post">
 
         <h2 class="heading-medium remove-top-margin">Level</h2>
         {% set fields = [
