--- a/app/views/new/subject.html
+++ b/app/views/new/subject.html
@@ -6,14 +6,14 @@
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <a href="/new/{{ code }}/phase" class="link-back">Back</a>
+  <a href="{{ paths.back }}" class="link-back">Back</a>
 
   <h1 class="heading-xlarge">
     {{ title }}
   </h1>
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form action="/new/{{ code }}/languages" method="post">
+      <form action="{{ paths.next }}" method="post">
         {% set primaryFields = [
            { name: 'Primary'},
            { name: 'Primary with English'},
