--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">December 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/new-course-locations">New course wizard: Training locations</a>
+      </h3>
+      <p>
+        Choosing training locations from the new course wizard
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/new-course-2">New course wizard – Iteration 6 December</a>
       </h3>
       <p>
