Use SEND not SEN

--- a/app/views/new/phase.html
+++ b/app/views/new/phase.html
@@ -31,10 +31,10 @@
 
         {{ macros.radioGroup(code + '-new-phase', fields) }}
 
-        <h2 class="heading-medium">Special educational needs (SEN)</h2>
+        <h2 class="heading-medium">Special educational needs and disabilities (SEND)</h2>
         {% set fields = [
             {
-              name: 'This is a special educational needs course'
+              name: 'This is a SEND course'
             }
           ]
         %}
