Geography and History, not History and Geography

--- a/app/views/new/subject.html
+++ b/app/views/new/subject.html
@@ -17,7 +17,7 @@
         {% set primaryFields = [
            { name: 'Primary'},
            { name: 'Primary with English'},
-           { name: 'Primary with History and Geography'},
+           { name: 'Primary with Geography and History'},
            { name: 'Primary with Mathematics'},
            { name: 'Primary with Modern Languages'},
            { name: 'Primary with Physical Education'},
