--- a/app/views/new/languages.html
+++ b/app/views/new/languages.html
@@ -35,7 +35,7 @@
           {{ macros.checkboxGroup(code + '-new-further-languages', languageFields, 0, false) }}
         {% endset %}
 
-        {{ macros.checkboxGroup(code + '-new-further-languages', [
+        {{ macros.checkboxGroup(code + '-new-further-languages-check', [
           {
             name: 'This course has more languages',
             more: furtherLanguages
